k8s/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "jellyfin"
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
  type: LoadBalancer
  loadBalancerClass: tailscale
